<resources>
    <string name="app_name">CourseFinderApp</string>
    <string name="onboarding_title">Тысячи курсов\nв одном месте</string>
    <string name="onboarding_chip_1C_admin">1С Администрирование</string>
    <string name="onboarding_chip_RabbitMQ">RabbitMQ</string>
    <string name="onboarding_chip_traffic">Трафик</string>
    <string name="onboarding_chip_content">Контент маркетинг</string>
    <string name="onboarding_chip_B2B">B2B маркетинг</string>
    <string name="onboarding_chip_google_analytics">Google Аналитика</string>
    <string name="onboarding_chip_UX">UX исследователь</string>
    <string name="onboarding_chip_web_analytics">Веб-аналитика</string>
    <string name="onboarding_chip_big_data">Big Data</string>
    <string name="onboarding_chip_game_design">Геймдизайн</string>
    <string name="onboarding_chip_web_design">Веб-дизайн</string>
    <string name="onboarding_chip_cinema_4D">Cinema 4D</string>
    <string name="onboarding_chip_prompt_engineering">Промпт инженеринг</string>
    <string name="onboarding_chip_webflow">Webflow</string>
    <string name="onboarding_chip_three_js">Three.js</string>
    <string name="onboarding_chip_parsing">Парсинг</string>
    <string name="onboarding_chip_python_dev">Python-разработка</string>
    <string name="onboarding_button_continue">Продолжить</string>
    <string name="sign_up_header">Регистрация</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_email_hint">example@gmail.com</string>
    <string name="sign_up_invalid_email">Неверный формат данных</string>
    <string name="sign_up_password">Пароль</string>
    <string name="sign_up_password_hint">Введите пароль</string>
    <string name="sign_up_password_requirements">Пароль должен быть не менее 8 символов, включая цифры и буквы в верхнем и нижнем регистре</string>
    <string name="sign_up_confirm_password">Повторить пароль</string>
    <string name="sign_up_confirm_password_hint">Введите пароль еще раз</string>
    <string name="sign_up_invalid_password">Пароль не совпадает</string>
    <string name="sign_up_invalid_username">Такой логин уже существует</string>
    <string name="sign_up_empty_field">Заполните поле</string>
    <string name="sign_up_action">Регистрация</string>
    <string name="sign_up_had_account">Уже есть аккаунт?</string>
    <string name="sign_up_sing_in_action">Войти</string>
    <string name="sign_in_header">Вход</string>
    <string name="sign_in_action">Вход</string>
    <string name="sign_in_invalid_email_or_password">Неверный логин или пароль</string>
    <string name="sign_in_had_not_account">Нету аккаунта?</string>
    <string name="sign_in_sing_un_action">Регистрация</string>
    <string name="sign_in_forgot_password">Забыл пароль</string>
    <string name="home_bottom_nav_home">Главная</string>
    <string name="home_bottom_nav_favorites">Избранное</string>
    <string name="home_bottom_nav_account">Аккаунт</string>
    <string name="home_sort_menu_by_date">По дате добавления</string>
    <string name="home_sort_menu_by_popular">По популярности</string>
    <string name="home_sort_menu_by_rating">По рейтингу</string>
    <string name="home_filter_menu_category">По категории</string>
    <string name="home_filter_price">По цене</string>
    <string name="home_filter_submenu_free">Бесплатно</string>
    <string name="home_filter_submenu_paid">Платно</string>
    <string name="home_filter_submenu_python">Python</string>
    <string name="home_filter_submenu_c_sharp">C#</string>
    <string name="home_filter_submenu_c">C/C++</string>
    <string name="home_filter_submenu_java">Java</string>
    <string name="home_filter_submenu_kotlin">Kotlin</string>
    <string name="home_search_hint">Search courses...</string>
    <string name="home_filter_by_date">По дате добавления</string>
    <string name="home_details">Подробнее</string>
    <string name="home_course_price">%1$s  ₽</string>
    <string name="home_course_price_free">Бесплатно</string>
    <string name="home_no_rating">Нет рейтинга</string>
    <string name="load_state_footer_error">Произошла ошибка</string>
    <string name="load_state_footer_retry">Повторить</string>
    <string name="course_details_author">Автор</string>
    <string name="course_details_start_course">Начать курс</string>
    <string name="course_details_to_platform">Перейти на платформу</string>
    <string name="course_details_about_course">О курсе</string>
    <string name="favorite_header">Избранное</string>
    <string name="account_header">Профиль</string>
    <string name="account_write_to_support">Написать в поддержку</string>
    <string name="account_settings">Настройки</string>
    <string name="account_log_out">Выйти из аккаунта</string>
    <string name="account_your_courses">Ваши курсы</string>
    <string name="account_progress_percent">%1$d%%</string>
    <string name="account_lesson_divider">/</string>
    <string name="account_lesson_count">%1$s% уроков</string>
</resources>