<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/price"
        android:orderInCategory="1"
        android:title="@string/home_filter_price">

        <menu>
            <item
                android:id="@+id/free"
                android:orderInCategory="1"
                android:title="@string/home_filter_submenu_free" />

            <item
                android:id="@+id/paid"
                android:orderInCategory="2"
                android:title="@string/home_filter_submenu_paid" />
        </menu>

    </item>

    <item
        android:id="@+id/category"
        android:orderInCategory="2"
        android:title="@string/home_filter_menu_category">

        <menu>
            <item
                android:id="@+id/python"
                android:orderInCategory="1"
                android:title="@string/home_filter_submenu_python" />

            <item
                android:id="@+id/cSharp"
                android:orderInCategory="2"
                android:title="@string/home_filter_submenu_c_sharp" />

            <item
                android:id="@+id/c"
                android:orderInCategory="3"
                android:title="@string/home_filter_submenu_c" />

            <item
                android:id="@+id/java"
                android:orderInCategory="4"
                android:title="@string/home_filter_submenu_java" />

            <item
                android:id="@+id/kotlin"
                android:orderInCategory="5"
                android:title="@string/home_filter_submenu_kotlin" />
        </menu>

    </item>

</menu>