<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeView"
        android:icon="@drawable/ic_home"
        android:title="@string/home_bottom_nav_home"
        app:titleTextAppearance="@style/TextStyleSmallButton"
        android:orderInCategory="1" />

    <item
        android:id="@+id/favoriteView"
        android:icon="@drawable/ic_favorites"
        android:title="@string/home_bottom_nav_favorites"
        app:titleTextAppearance="@style/TextStyleSmallButton"
        android:orderInCategory="2" />

    <item
        android:id="@+id/accountView"
        android:icon="@drawable/ic_account"
        android:title="@string/home_bottom_nav_account"
        app:titleTextAppearance="@style/TextStyleSmallButton"
        android:orderInCategory="3" />
</menu>