<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpViewContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:id="@+id/signIpHeader"
        style="@style/TextStyleHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/sign_in_header" />

    <TextView
        android:id="@+id/emailView"
        style="@style/TextStyleTitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/sign_up_email" />

    <EditText
        android:id="@+id/emailContentView"
        style="@style/TextStyleHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/sign_up_email_hint"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/TextStyleTextAppearance" />

    <TextView
        android:id="@+id/passwordView"
        style="@style/TextStyleTitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_up_password" />

    <EditText
        android:id="@+id/passwordContentView"
        style="@style/TextStyleHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/sign_up_password_hint"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAppearance="@style/TextStyleTextAppearance" />

    <TextView
        android:id="@+id/invalidEmailOrPasswordView"
        style="@style/TextStyleInvalidData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:text="@string/sign_in_invalid_email_or_password"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInActionView"
        style="@style/TextStyleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_simple_action"
        android:text="@string/sign_in_action"
        app:backgroundTint="@null" />

    <LinearLayout
        android:id="@+id/signUpContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/haveNotAccountView"
            style="@style/TextStyleSmallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_had_not_account" />

        <TextView
            android:id="@+id/signUpView"
            style="@style/TextStyleSmallButtonGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/sign_in_sing_un_action" />
    </LinearLayout>

    <TextView
        style="@style/TextStyleSmallButtonGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/sign_in_forgot_password" />


    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="32dp"
        app:dividerColor="@color/grey_divider_color"
        app:dividerThickness="1dp" />

    <LinearLayout
        android:id="@+id/signInWithContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/signInWithVKActionView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_vk_action"
            android:contentDescription="@null"
            android:src="@drawable/ic_vk" />

        <ImageButton
            android:id="@+id/signInWithOKActionView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_ok_action"
            android:contentDescription="@null"
            android:src="@drawable/ic_ok" />
    </LinearLayout>
</LinearLayout>