<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coursesChipContainerRoot"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/firstLineChipsContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/ICAdminChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_1C_admin"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/rabbitMQChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/green_color_button_default"
                android:rotation="-20"
                android:translationY="12dp"
                android:text="@string/onboarding_chip_RabbitMQ"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/trafficChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_traffic"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondLineChipsContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:elevation="4dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/contentChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_content"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/BToBChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_B2B"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/googleAnalyticsChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_google_analytics"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdLineChipsContainer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/UXChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_UX"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/webAnalyticsChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_web_analytics"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/bigDataChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/green_color_button_default"
                android:rotation="20"
                android:translationY="-8dp"
                android:text="@string/onboarding_chip_big_data"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/forthLineChipsContainer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:elevation="3dp"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/gameDesignChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_game_design"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/webDesignChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_web_design"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/cinema4DChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_cinema_4D"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/promptEngineeringChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_prompt_engineering"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifthLineChipsContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.chip.Chip
                android:id="@+id/webflowChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_webflow"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/threeJsChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/green_color_button_default"
                android:rotation="-20"
                android:translationY="-10dp"
                android:text="@string/onboarding_chip_three_js"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:ensureMinTouchTargetSize="false"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/parsingChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_parsing"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/pythonDevChipView"
                style="@style/TextStyleButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:backgroundTint="@color/glass_color"
                android:text="@string/onboarding_chip_python_dev"
                android:textColor="@android:color/white"
                app:chipCornerRadius="26dp"
                app:chipEndPadding="0dp"
                app:chipStartPadding="0dp"
                app:textEndPadding="20dp"
                app:textStartPadding="20dp"
                app:ensureMinTouchTargetSize="false"/>
        </LinearLayout>
    </LinearLayout>