<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingMenuContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:background="@drawable/bg_setting_menu"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="8dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:id="@+id/writeToSupportContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/writeToSupportView"
            style="@style/TextStyleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_write_to_support" />

        <ImageView
            android:id="@+id/moveToSupportView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_setting_arrow" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerView1"
        app:dividerColor="@color/grey_divider_color"
        app:dividerThickness="1dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/settingsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/settingView"
            style="@style/TextStyleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_settings" />

        <ImageView
            android:id="@+id/settingActionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_setting_arrow" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerView2"
        app:dividerColor="@color/grey_divider_color"
        app:dividerThickness="1dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/logOutContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/logOutView"
            style="@style/TextStyleButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/account_log_out" />

        <ImageView
            android:id="@+id/logOutActionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_setting_arrow" />
    </LinearLayout>
</LinearLayout>